--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "express": "^4.16.3",
-    "sqlite": "^2.9.2"
+    "sqlite3": "^4.0.2"
   }
 }
