--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "express": "^4.16.3",
+    "nano-sql": "^1.7.0",
     "sqlite3": "^4.0.2"
   }
 }
