--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jonathan-irvin/vehicle-lite#readme",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nano-sql": "^1.7.0",
     "sqlite3": "^4.0.2"
